# TriangulationSDL2

./: CMakeLists.txt  build.sh
include/: primitives.hpp
sources/: main.cpp  primitives.cpp
